<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".search.view.SearchFragment" >

    <SearchView
        android:id="@+id/search"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:background="@drawable/border"
        android:queryHint="@string/search"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerSearch"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="170dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/groubSearch" />

    <RadioGroup
        android:id="@+id/groubSearch"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search">

        <RadioButton
            android:id="@+id/radioCategory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/border"
            android:paddingEnd="5dp"
            android:text="@string/categories"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/radioCountry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/border"
            android:paddingEnd="5dp"
            android:text="@string/country"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/radioIngredients"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:background="@drawable/border"
            android:paddingEnd="5dp"
            android:text="@string/ingredients"
            android:textSize="16sp" />
    </RadioGroup>


</androidx.constraintlayout.widget.ConstraintLayout>