<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".authentication.signup.view.SignupActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TableRow
                android:id="@+id/tableRow"
                android:layout_width="110dp"
                android:layout_height="1dp"
                android:layout_marginTop="28dp"
                android:layout_marginEnd="52dp"
                android:background="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnSignup" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="300dp"
                android:layout_height="250dp"
                android:scaleType="fitCenter"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/signlogo" />

            <EditText
                android:id="@+id/editTextName"
                android:layout_width="300dp"
                android:layout_height="40dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/border"
                android:ems="10"
                android:hint="@string/userName"
                android:inputType="textPersonName"
                android:paddingStart="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView2" />

            <EditText
                android:id="@+id/editTextEmail"
                android:layout_width="300dp"
                android:layout_height="40dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/border"
                android:ems="10"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:paddingStart="10dp"
                app:layout_constraintEnd_toEndOf="@+id/editTextName"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/editTextName"
                app:layout_constraintTop_toBottomOf="@+id/editTextName" />

            <EditText
                android:id="@+id/editTextPassword"
                android:layout_width="300dp"
                android:layout_height="40dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/border"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingStart="10dp"
                app:layout_constraintEnd_toEndOf="@+id/editTextEmail"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/editTextEmail"
                app:layout_constraintTop_toBottomOf="@+id/editTextEmail" />

            <EditText
                android:id="@+id/editTextConfirmPassword"
                android:layout_width="300dp"
                android:layout_height="40dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/border"
                android:ems="10"
                android:hint="@string/confirmPassword"
                android:inputType="textPassword"
                android:paddingStart="10dp"
                app:layout_constraintEnd_toEndOf="@+id/editTextPassword"
                app:layout_constraintStart_toStartOf="@+id/editTextPassword"
                app:layout_constraintTop_toBottomOf="@+id/editTextPassword" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnSignup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/ripple_button"
                android:text="@string/singup"
                app:layout_constraintEnd_toEndOf="@+id/editTextConfirmPassword"
                app:layout_constraintHorizontal_bias="0.491"
                app:layout_constraintStart_toStartOf="@+id/editTextConfirmPassword"
                app:layout_constraintTop_toBottomOf="@+id/editTextConfirmPassword" />

            <TableRow
                android:id="@+id/tableRow2"
                android:layout_width="110dp"
                android:layout_height="1dp"
                android:layout_marginStart="40dp"
                android:layout_marginTop="28dp"
                android:background="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnSignup" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="12dp"
                android:text="@string/or"
                android:textColor="@color/black"
                android:textSize="24sp"
                app:layout_constraintStart_toEndOf="@+id/tableRow2"
                app:layout_constraintTop_toBottomOf="@+id/btnSignup" />

            <ImageView
                android:id="@+id/google"
                android:layout_width="50dp"
                android:layout_height="60dp"
                android:layout_marginEnd="196dp"
                android:layout_marginBottom="12dp"
                android:src="@drawable/google"
                app:layout_constraintBottom_toBottomOf="@+id/facebook"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/facebook"
                app:layout_constraintVertical_bias="0.0" />

            <ImageView
                android:id="@+id/facebook"
                android:layout_width="50dp"
                android:layout_height="60dp"
                android:layout_marginStart="208dp"
                android:layout_marginTop="24dp"
                android:src="@drawable/facebook"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tableRow2" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="100dp"
                android:layout_marginTop="12dp"
                android:text="@string/haveAccount"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/facebook" />

            <TextView
                android:id="@+id/textLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="84dp"
                android:layout_marginBottom="20dp"
                android:text="@string/login"
                android:textColor="@color/maincolor"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="@+id/textView4"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/textView4"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/skip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/border"
                android:padding="5dp"
                android:text="@string/skip"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>